--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -5,7 +5,7 @@
 <!--<div th:fragment="head (title)" >-->
 <!--<title><span th:text="${title}"></span></title>-->
 <!--</div>-->
-<head th:fragment="head">
+<head th:fragment="head(title)">
     <meta charset="UTF-8"/>
     <title th:text="${title}"></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.2/css/uikit.min.css" />
