--- a/src/main/resources/templates/adopter/program.html
+++ b/src/main/resources/templates/adopter/program.html
@@ -9,14 +9,15 @@
 
 <div class="uk-container">
     <div class="uk-grid" uk-grid="masonry:true">
-            <div class="uk-card" style="width: 18rem;" th:object="${program}">
+            <div class="uk-card">
                 <div class="uk-card-body">
-                    <h5 class="uk-card-title" th:text="${program.name}"></h5>
+                    <h1 class="uk-card-title" th:text="${program.name}"></h1>
+                    <h2 class="uk-card-text" th:text="'Shelter: ' + ${shelter.name}"></h2>
                     <p class="uk-card-text" th:text="${program.type}"></p>
                     <p class="uk-card-text" th:text="${program.description}"></p>
                     <p class="uk-card-text" th:text="${program.time} + ':00 pm'"></p>
                     <p class="uk-card-text" th:text="${program.length} + ' hours'"></p>
-                    <p class="uk-card-text" th:text="'Breed: ' + ${program.breed}"></p>
+                    <p class="uk-card-text" th:text="'Breed: ' + ${program.petType}"></p>
                 </div>
             </div>
         </div>
