--- a/src/main/resources/templates/shelter/pets.html
+++ b/src/main/resources/templates/shelter/pets.html
@@ -21,7 +21,12 @@
 
         <div>
             <label for="color">Color</label>
-            <input id="color" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="password" th:field="*{color}" />
+            <input id="color" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{color}" />
+        </div>
+
+        <div>
+            <label for="sex">Sex</label>
+            <input id="sex" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{sex}" />
         </div>
 
         <div>
@@ -39,11 +44,23 @@
             <input id="weight" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{weight}" />
         </div>
 
+        <div>
+            <label for="shelter">Shelter</label>
+            <input id="shelter" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{shelter}" />
+        </div>
+
+        <!--<div>-->
+            <!--<label for="user">User</label>-->
+            <!--<input id="user" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{user}" />-->
+        <!--</div>-->
+
+        <button class="uk-button uk-button-default uk-button-small"> Submit </button>
+
     </form>
 </div>
 
-<div th:replace="partials :: footer" />
 <div th:replace="partials :: scripts" />
+<div th:replace="partials :: footer" />
 
 </body>
 </html>
