added the title parameters to shelter/home and lo-in.html

--- a/src/main/resources/templates/log-in.html
+++ b/src/main/resources/templates/log-in.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="partials :: head">
+<head th:replace="partials :: head('Login')">
 </head>
 <nav th:replace="partials :: navbar"/>
 <body>
