--- a/src/main/resources/templates/shelter/home.html
+++ b/src/main/resources/templates/shelter/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace = "partials :: head"/>
+<head th:replace = "partials :: head('Home')"/>
 <body>
 
 <nav th:replace="partials :: navbar"/>
