--- a/src/main/resources/templates/adopter/programs.html
+++ b/src/main/resources/templates/adopter/programs.html
@@ -4,24 +4,17 @@
 <body>
 
 <nav th:replace="partials :: navbar"/>
-<div class="container">
-    <div class="row">
-        <div class="col"></div>
-        <div class="col">
-                <div class="card" style="width: 18rem;" th:each="program:${programs}">
+<div class="uk-container">
+               <div class="uk-grid" uk-grid="masonry:true">
+                   <div class="card" th:each="program:${programs}">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${program.name}"></h5>
                         <p class="card-text" th:text="${program.type}"></p>
-                        <p class="card-text" th:text="${program.description}"></p>
-                        <p class="card-text" th:text="${program.time} + ':00 pm'"></p>
-                        <p class="card-text" th:text="${program.length} + ' hours'"></p>
-                        <p class="card-text" th:text="'Breed: ' + ${program.petType}"></p>
+                       <p class="uk-card-text" th:text="${program.location}"/>
                     </div>
                 </div>
-
-        </div>
-        <div class="col"></div>
-    </div>
+               </div>
+</div>
 </div>
 
 </body>
