--- a/src/main/resources/templates/shelter/createProgram.html
+++ b/src/main/resources/templates/shelter/createProgram.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="partials :: head">
-    <meta charset="UTF-8"/>
-    <title>Shelter Programs</title>
-</head>
+<head th:replace="partials :: head('Create Program')"/>
 <body>
 <div class="container uk-margin-bottom">
     <nav th:replace="partials :: navbar"/>
