adopter home page

--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -36,13 +36,13 @@
 
     <div class="uk-height-large uk-background-cover uk-light uk-flex uk-flex-top" style="height: 100vh; background-image: url('http://www.insurancecredit.us/wp-content/uploads/2018/05/Veterinary-Pet-Insurance.jpg');">
 
-        <h1 class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical" uk-parallax="opacity: 0,1; y: 100,0; viewport: 0.5"><a href="sign-up.html">Register today!</a></h1>
-
+        <h1 class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical" uk-parallax="opacity: 0,1; y: 100,0; viewport: 0.5"><a href="/sign-up">Register today!</a></h1>
+        <h1 class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical" uk-parallax="opacity: 0,1; y: 100,0; viewport: 0.5"><a href="/home">Sign-in</a></h1>
     </div>
 
 
 
-    <!--<footer th:replace="partials::footer"/>-->
+    <footer th:replace="partials::footer"/>
     <div th:replace="partials::scripts"/>
 </body>
 </html>
