--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -37,7 +37,7 @@
 </div>
 
 <div th:fragment="footer">
-    <footer class="footer uk-flex uk-position-bottom">
+    <footer class="footer uk-flex">
         <span class="uk-margin-auto">2019 Codeup. For Educational Purposes Only.</span>
     </footer>
 </div>
