updated head tags

--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace = "partials :: head"/>
+<head th:replace = "partials :: head('Pet-tential')"/>
 <body>
 
     <div uk-height-viewport="expand: true" class="uk-background-cover uk-light uk-flex uk-flex-top" style="height: 100vh; background-image: url('https://www.dailydot.com/wp-content/uploads/f00/fe/3715697e82d68e33a9752a2ee757edba.jpg');">
