--- a/src/main/resources/templates/shelter.html
+++ b/src/main/resources/templates/shelter.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="partials::head"/>
+<head th:replace="partials::head('Shelter')"/>
 <body>
 
 <nav th:replace="partials::navbar"/>
