--- a/src/main/resources/templates/shelter/pets.html
+++ b/src/main/resources/templates/shelter/pets.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace = "partials :: head">
+<head th:replace = "partials :: head('Create Pet')">
     <meta charset="UTF-8"/>
     <title>Create Pet Form</title>
 </head>
