--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="partials :: head">
+<head th:replace="partials :: head('sign-up')">
     <meta charset="UTF-8" />
     <title>Sign up</title>
 </head>
