--- a/src/main/resources/templates/adopter/all_pets.html
+++ b/src/main/resources/templates/adopter/all_pets.html
@@ -3,31 +3,41 @@
 <head th:replace = "partials :: head"/>
 <body>
 
-<nav th:replace="partials :: navbar"/>
-
+<div class="container uk-margin-bottom">
+    <nav th:replace="partials :: navbar"/>
+</div>
 
       <!--TODO: Pass all pets to this page-->
-  <div class="container uk-flex">
-      <h1 class="uk-margin-top">List of Pets</h1>
-      <div class="uk-margin">
-        <div class="uk-card" th:each="pet : ${pets}">
-            <div class="uk-card-body">
-                <a th:href="'/adopter/pet/' + ${pet.id}"><img th:src="${pet.picture}" class="card-img-top" alt="Pet Image"/></a>
-                <p class="uk-card-title" th:text="${pet.age}"></p>
-                <p class="uk-card-text" th:text="${pet.breed}"></p>
-                <p class="uk-card-text" th:text="${pet.color}"></p>
-                <p class="uk-card-text" th:text="${pet.name}"></p>
-                <p class="uk-card-text" th:text="${pet.description}"></p>
-                <p class="uk-card-text" th:text="${pet.sex}"></p>
-                <p class="uk-card-text" th:text="${pet.weight}"></p>
-            </div>
+<div class="uk-container">
+<h1 class="uk-margin-top">List of Pets</h1>
+    <div class="uk-child-width-1-2@m uk-grid">
+        <div class="uk-card uk-card-default uk-width-auto">
+                <div class="uk-card-media-top">
+                    <div class="uk-card" th:each="pet : ${pets}">
+                        <div>
+                        <a th:href="'/adopter/pet/' + ${pet.id}">
+                            <img th:src="${pet.picture}" class="uk-card-media-top" alt="Pet Image"/></a>
+                            <div class="uk-margin">
+
+                                <div class="uk-card-media-top uk-width-auto">
+                                    <label for="description">Description</label>
+                                    <p id="description" th:text="${pet.description}"></p>
+                                </div>
+                                <div class="uk-card-media-top uk-width-auto">
+                                    <label for="name">Name</label>
+                                    <p id="name" th:text="${pet.name}"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </div>
-     </div>
-  </div>
-
-
-<div th:replace="partials::scripts"/>
-<footer th:replace="partials::footer"/>
+    </div>
+</div>
+<div th:replace="partials::scripts" />
 
 </body>
+    <div>
+        <footer th:replace="partials::footer"/>
+    </div>
 </html>
