--- a/src/main/resources/templates/shelter/home.html
+++ b/src/main/resources/templates/shelter/home.html
@@ -26,7 +26,7 @@
                             <form th:action="'/adopt/' + ${app.getPet().getId()} + '/accept/' + ${app.getUser().getId()}" method="post" >
                                 <button type="submit">Accept Adoption Request</button>
                             </form>
-                            <form th:action="'/adopt/' + ${app.getPet().getId()} + '/reject'" method="post" >
+                            <form th:action="'/adopt/' + ${app.getId()} + '/reject/' + ${app.getUser().getId()}" method="post" >
                                 <button type="submit">Reject Adoption Request</button>
                             </form>
                         </div>
