edited the partials.html so the nav-links work and theres only one footer fragment

--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -25,19 +25,19 @@
     <div class="uk-navbar-left">
     <ul class="uk-navbar-nav">
         <li>
-            <a class="nav-link" href="">Home</a>
+            <a class="nav-link" href="/home">Home</a>
         </li>
         <li>
             <a class="nav-link" href="/sign-up">Register</a>
         </li>
         <li>
-            <a class="nav-link" href="/">Login</a>
+            <a class="nav-link" href="/login">Login</a>
         </li>
         <li>
             <a class="nav-link" href="/adopter/pets">View Pets</a>
         </li>
         <li>
-            <a class="nav-link" href="/">Logout</a>
+            <a class="nav-link" href="/logout">Logout</a>
         </li>
     </ul>
     </div>
@@ -56,10 +56,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.2/js/uikit-icons.min.js"></script>
 </div>
 
-<div th:fragment="footer">
-    <footer class="footer uk-flex uk-position-bottom">
-        <span class="uk-margin-auto">2019 Codeup. For Educational Purposes Only.</span>
-    </footer>
-</div>
 </body>
 </html>
