--- a/src/main/resources/templates/createProgram.html
+++ b/src/main/resources/templates/createProgram.html
@@ -5,14 +5,14 @@
 <div class="container uk-margin-bottom">
     <nav th:replace="partials :: navbar"/>
 </div>
-<div class="container uk-flex">
+<div class="uk-container uk-flex">
 
 <form th:action="@{/createProgram}" method="POST" class="uk-margin-auto uk-width-1-2 " th:object="${program}">
     <h1 class="uk-margin-top">Create a Program</h1>
-    <div class="uk-margin">
+
     <label for="name">Name</label>
     <input id="name" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{name}" />
-    </div>
+
 
     <div>
     <label for="type">Type</label>
@@ -38,9 +38,12 @@
     <label for="pet type">Pet Type</label>
     <input id="pet type" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{petType}" />
     </div>
+
+    <button class="uk-button uk-button-primary uk-margin-auto" type="submit"> Submit </button>
 </form>
 </div>
 
+<hr/>
 <div th:replace="partials :: footer" />
 <div th:replace="partials :: scripts" />
 
