--- a/src/main/resources/templates/shelter/home.html
+++ b/src/main/resources/templates/shelter/home.html
@@ -5,50 +5,78 @@
 
 <nav th:replace="partials :: navbar"/>
 <div class="container">
-    <!--Row One-->
-    <div class="row">
+    <div class="uk-grid-divider uk-child-width-expand uk-grid">
+        <!--Row One-->
 
-    </div>
 
-    <!--Row Two: Three columns-->
-    <div class="row">
-        <!--Column One: Programs-->
-        <div class="col-md-4 col-sm-12">
+        <!--TODO: The controller with the path to this home page need to relay the programs that user has -->
+        <div>
+            <table class="uk-table uk-table-striped">
+                <caption class="uk-margin-auto"><h4>Applications</h4></caption>
+                <thead>
+                <tr class="card-body">
+                    <th>Applicant name</th>
+                    <th>Pet name</th>
+                    <th>Accept/Reject</th>
+                </tr>
+                </thead>
+                <tbody th:each="app : *{apps}">
+                <tr>
+                    <td th:text="${app.getPet().getName()}"></td>
+                    <td th:text="${app.getUser().getName()}"></td>
+                    <td>
+                        <form th:action="'/adopt/' + ${app.getPet().getId()} + '/accept'" method="post" >
+                            <button type="submit">Accept</button>
+                        </form>
+                    </td>
+                    <td>
+                        <form th:action="'/adopt/' + ${app.getPet().getId()} + '/reject'" method="post" >
+                            <button type="submit">Reject</button>
+                        </form>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
 
-            <!--TODO: Show all adoption applicants here -->
-            <div th:each="app : ${apps}">
-                <div class="col-12">
-                    <div class="card">
-                        <div class="card-body">
-                            <h1 th:text="${app.getPet().getName()}"></h1>
-                            <h1 th:text="${app.getUser().getName()}"></h1>
-                            <form th:action="'/adopt/' + ${app.getPet().getId()} + '/accept'" method="post" >
-                                <button type="submit">Accept Adoption Request</button>
-                            </form>
-                            <form th:action="'/adopt/' + ${app.getPet().getId()} + '/reject'" method="post" >
-                                <button type="submit">Reject Adoption Request</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
+        <div>
+            <div style="margin-left: 15vh;" class="uk-margin-auto-vertical">
+                <!--TODO: Add the appropirate pages and Controllers for the pages-->
+                <div class="uk-margin-auto uk-margin-bottom uk-margin-large-top"><a href="/create/pet"><button class="uk-margin-auto uk-width-auto uk-button uk-button-primary">Create pet listing</button></a></div>
+                <div class="uk-margin-auto uk-margin-bottom"><a href="/adopter/pets"><button class="uk-margin-auto uk-width-auto uk-button uk-button-primary">Pet Management</button></a></div>
+                <div class="uk-margin-auto"><a href="/shelter/createProgram"><button class="uk-margin-auto uk-width-auto uk-button uk-button-primary">Create Program</button></a></div>
             </div>
         </div>
 
 
-        <!--Column Two: Actions-->
-        <div class="col-md-4 col-sm-12">
-
-            <!--TODO: Add the appropriate pages and Controllers for the pages-->
-            <a href="/create/pet"><button class="btn btn-primary">Create a pet</button></a>
-        </div>
     </div>
-    <!--ROW TWO END-->
 
-    <!--ROW THREE-->
-    <div class="row">
-        <div class="col-md-4 offset-md-4">
-            <a href="/adopter/pets"> <button class="btn btn-primary"> Pet Management</button></a>
+    <div class="uk-grid-divider uk-child-width-expand uk-grid">
+
+        <div>
+            <table class="uk-table uk-table-striped">
+                <caption class="uk-margin-auto"><h4>Programs</h4></caption>
+                <thead>
+                <tr class="card-body">
+                    <th>Program name</th>
+                    <th>Edit</th>
+                </tr>
+                </thead>
+                <tbody th:each="program : *{programs}">
+                <tr>
+                    <td th:text="${program.getName()}"></td>
+                    <td>
+                        <form th:action="'/shelter/program/edit/' + ${program.getId()}" method="post" >
+                            <button type="submit">Edit</button>
+                        </form>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
+
+
+
     </div>
 
 </div>
