--- a/src/main/resources/templates/shelter_edit.html
+++ b/src/main/resources/templates/shelter_edit.html
@@ -5,18 +5,20 @@
 
 <nav th:replace="partials :: navbar"/>
 
-<form th:action="'/shelter/edit/' + ${shelter.getId()}" method="post" >
-    <label>Name</label>
-    <input type="text" name="name" th:value="${shelter.getName()}"/>
-    <label>Location</label>
-    <input type="text" name="location" th:value="${shelter.getLocation()}"/>
-    <label>Phone Number</label>
-    <input type="text" name="number" th:value="${shelter.getNumber()}"/>
-    <label>Email</label>
-    <input type="text" name="email" th:value="${shelter.getEmail()}"/>
+<div class="uk-container">
+    <form th:action="'/shelter/edit/' + ${shelter.getId()}" method="post" >
+        <label>Name</label>
+        <input type="text" name="name" th:value="${shelter.getName()}"/>
+        <label>Location</label>
+        <input type="text" name="location" th:value="${shelter.getLocation()}"/>
+        <label>Phone Number</label>
+        <input type="text" name="number" th:value="${shelter.getNumber()}"/>
+        <label>Email</label>
+        <input type="text" name="email" th:value="${shelter.getEmail()}"/>
 
-    <input type="submit" />
-</form>
+        <input type="submit" />
+    </form>
+</div>
 
 <footer th:replace="partials::footer"/>
 <div th:replace="partials::scripts"/>
