--- a/src/main/resources/templates/shelter/pets.html
+++ b/src/main/resources/templates/shelter/pets.html
@@ -45,10 +45,14 @@
         </div>
 
         <div>
-            <label for="shelter">Shelter</label>
-            <input id="shelter" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{shelter}" />
+            <label for="picture">Picture</label>
+            <input id="picture" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{picture}" />
         </div>
 
+        <div>
+            <label for="description">Description</label>
+            <input id="description" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{description}" />
+        </div>
         <!--<div>-->
             <!--<label for="user">User</label>-->
             <!--<input id="user" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{user}" />-->
