edited some shelter_edit.html

--- a/src/main/resources/templates/shelter_edit.html
+++ b/src/main/resources/templates/shelter_edit.html
@@ -16,7 +16,7 @@
         <label>Email</label>
         <input type="text" name="email" th:value="${shelter.getEmail()}"/>
 
-        <input type="submit" />
+        <button type="uk-button uk-button-primary"> Confirm </button>
     </form>
 </div>
 
