--- a/src/main/resources/templates/user_info.html
+++ b/src/main/resources/templates/user_info.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>User View</title>
-</head>
+<head th:replace="partials::head('User Information')"/>
 <body>
 
 <nav th:replace="partials :: navbar"/>
-
-<div class="row">
-
-</div>
 
 <div class="card text-center" style="width: 18rem;">
     <h5 class="card-title"><strong>User Information</strong></h5>
@@ -18,10 +11,10 @@
     <div class="card-body" method="GET" th:object="${user}">
         <div class="card" style="width: 18rem;">
             <ul class="list-group list-group-flush">
-                <li class="list-group-item" th:field="*{name}>name</li>
-                <li class="list-group-item" th:field="*{email}>email</li>
-                <li class="list-group-item" th:field="*{address}>address</li>
-                <li class="list-group-item" th:field="*{number}>number</li>
+                <li class="list-group-item" th:field="*{name}">name</li>
+                <li class="list-group-item" th:field="*{email}">email</li>
+                <li class="list-group-item" th:field="*{address}">address</li>
+                <li class="list-group-item" th:field="*{number}">number</li>
             </ul>
         </div>
     </div>
