google maps apt

--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -10,6 +10,15 @@
     <title th:text="${title}"></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.2/css/uikit.min.css" />
     <style>
+        #map {
+            width: 600px;
+            height: 300px;
+        }
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
         li a{
             color:#f4429b;
         }
