--- a/src/main/resources/templates/shelter.html
+++ b/src/main/resources/templates/shelter.html
@@ -12,6 +12,7 @@
        <div class="uk-width-expand">
            <h3 th:text="${shelter.name}"></h3>
            <label for="located"> Located at.... </label>
+           <div id="map"></div>
            <h3 th:text="${shelter.location}" id="located"></h3>
        </div>
 
@@ -52,6 +53,41 @@
 
 <footer th:replace="partials::footer"/>
 <div th:replace="partials::scripts"/>
-
+<script th:inline="javascript">
+    let shelter = /*[[${shelter}]]*/ "";
+    let map;
+    let geocoder;
+    let markerLat;
+    let markerLong;
+    let markerLatandLong;
+    function initMap() {
+        geocoder = new google.maps.Geocoder();
+        map = new google.maps.Map(document.getElementById('map'), {
+            center: {lat: -34.397, lng: 150.644},
+            zoom: 15
+        });
+        geocoder.geocode({"address": shelter.location}, function (results, status) {
+            markerLat = 0;
+            markerLong = 0;
+            if (status == google.maps.GeocoderStatus.OK) {
+                map.setCenter(results[0].geometry.location);
+                markerLat = results[0].geometry.location.lat;
+                markerLong = results[0].geometry.location.lng;
+                startingCoordinates = { lat : results[0].geometry.location.lat, lng : results[0].geometry.location.lat};
+            } else {
+                alert("Geocoding was not successful - STATUS: " + status);
+            }
+            console.log(markerLong);
+            console.log(markerLat);
+            markerLat = parseFloat(markerLat);
+            markerLong = parseFloat(markerLong);
+            markerLatandLong = {lat: markerLat, lng: markerLong};
+            console.log(markerLatandLong);
+            var marker = new google.maps.Marker({position: markerLatandLong, map: map});
+        });
+    }
+</script>
+<div th:inline="text" ></div>
+<script async="async" defer="defer"  th:src="@{https://maps.googleapis.com/maps/api/js(key=AIzaSyBhrTcCYA3CCFKHGsdILlnuPlWqnsNJU_Q,callback=initMap)}"/>
 </body>
 </html>
