--- a/src/main/resources/templates/views/shelter_home.html
+++ b/src/main/resources/templates/views/shelter_home.html
@@ -28,20 +28,27 @@
             <div class="uk-child-width-expand uk-margin-auto">
                <h2> Applications </h2>
                 <table class="uk-table uk-table-striped">
-                   <div th:each="applicant : ${applicants}">
+                   <div th:each="app : ${apps}">
                        <tr>
-                           <p th:text="$[applicant]"
+                           <td th:text="${app.getPet().getName()}"></td>
+                           <td th:text="${app.getUser().getName()}"></td>
+                           <td>
+                               <form th:action="'/adopt/' + ${app.getPet().getId()} + '/accept'" method="post" >
+                                   <button type="submit">Accept</button>
+                               </form>
+                           </td>
+                           <td>
+                               <form th:action="'/adopt/' + ${app.getPet().getId()} + '/reject'" method="post" >
+                                   <button type="submit">Reject</button>
+                               </form>
+                           </td>
                        </tr>
                    </div>
                 </table>
             </div>
-            <div class="uk-child-width-expand uk-margin-auto">
-                <button class="uk-button uk-button-default"><a href="/adopter/pets">Pet Management</a></button>
-            </div>
-            <div class="uk-child-width-expand uk-margin-auto">
-                <button class="uk-button uk-button-default"><a href="/create/pet">Add Pet</a></button>
-            </div>
         </div>
+
+
     </div>
 </div>
 
