--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -16,6 +16,12 @@
         li a:hover {
             color: #a02489;
         }
+        .footer {
+            position:absolute;
+            bottom:0;
+            width:100%;
+            height:10px;   /* Height of the footer */
+        }
     </style>
 </head>
 
