--- a/src/main/resources/templates/views/adopter_home.html
+++ b/src/main/resources/templates/views/adopter_home.html
@@ -2,10 +2,26 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace = "partials :: head('Home')" />
 <body>
+<nav style="background-color: #CCCCFF" class="uk-navbar-container uk-margin" uk-navbar="mode: click">
+    <div class="uk-navbar-center">
 
-    <nav th:replace="partials :: navbar"/>
+        <div><div>
+            <ul class="uk-navbar-nav">
+                <li><a href="/adopter/pets">View all pets</a></li>
+            </ul>
+        </div></div>
+        <a class="uk-navbar-item uk-logo" href="#">Pet-tential</a>
+        <div class="uk-navbar-right"><div>
+            <ul class="uk-navbar-nav">
+                <li><a href="/logout">Logout</a></li>
+                <li><a href="/user_info">Profile</a></li>
+            </ul>
+        </div></div>
 
-    <div class="uk-grid-divider uk-child-width-expand uk-grid">
+    </div>
+</nav>
+
+    <div class="uk-grid-divider uk-child-width-1-2 uk-grid uk-grid-match">
 
                <div>
                    <table class="uk-table uk-table-striped">
@@ -31,43 +47,14 @@
 
 
             <div>
-                <div style="margin-left: 15vh;" class="uk-margin-auto-vertical">
-                    <div class="uk-margin-auto uk-margin-bottom uk-margin-large-top"><a href="/adopter/programs"><button class="uk-margin-auto uk-width-auto uk-button uk-button-primary">Join Program</button></a></div>
-                    <div class="uk-margin-auto uk-margin-bottom"><a href="/adopter/pets"><button class="uk-margin-auto uk-width-auto uk-button uk-button-primary">Find a Pet</button></a></div>
-                    <div class="uk-margin-auto"><a href="/adopter/preferences"><button class="uk-margin-auto uk-width-auto uk-button uk-button-primary">Preferences</button></a></div>
+                <div class="uk-flex">
+                    <div style="margin-left: 15vh;" class="uk-margin-auto-vertical">
+                        <div class="uk-margin-auto uk-margin-bottom"><a href="/search"><button class="uk-margin-auto uk-width-auto uk-button uk-button-primary">Search pets/shelters/programs</button></a></div>
+                        <div class="uk-margin-auto"><a href="/adopter/preferences"><button class="uk-margin-auto uk-width-auto uk-button uk-button-primary">Preferences</button></a></div>
+                    </div>
                 </div>
             </div>
 
-
-        <div>
-            <table class="uk-table uk-table-striped">
-                <caption><h4>Volunteer opportunities near you</h4></caption>
-                <thead>
-                <tr class="card-body">
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th>Location</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>TestName</td>
-                    <td>TestDescription</td>
-                    <td>TestLocation</td>
-                </tr>
-                <tr>
-                    <td>TestName</td>
-                    <td>TestDescription</td>
-                    <td>TestLocation</td>
-                </tr>
-                <tr>
-                    <td>TestName</td>
-                    <td>TestDescription</td>
-                    <td>TestLocation</td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
     </div>
 
 <footer th:replace="partials :: footer"/>
