--- a/src/main/resources/templates/views/all_pets.html
+++ b/src/main/resources/templates/views/all_pets.html
@@ -4,7 +4,24 @@
 <body>
 
 <div class="container uk-margin-bottom">
-    <nav th:replace="partials :: navbar"/>
+    <nav style="background-color: #CCCCFF" class="uk-navbar-container uk-margin" uk-navbar="mode: click">
+        <div class="uk-navbar-center">
+
+            <div><div>
+                <ul class="uk-navbar-nav">
+                    <li><a href="/adopter/pets">View all pets</a></li>
+                </ul>
+            </div></div>
+            <a class="uk-navbar-item uk-logo" href="#">Pet-tential</a>
+            <div class="uk-navbar-right"><div>
+                <ul class="uk-navbar-nav">
+                    <li><a href="/logout">Logout</a></li>
+                    <li><a href="/user_info">Profile</a></li>
+                </ul>
+            </div></div>
+
+        </div>
+    </nav>
 </div>
 
 <div class="uk-container">
