--- a/src/main/resources/templates/views/preferences.html
+++ b/src/main/resources/templates/views/preferences.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace = "partials :: head('Set Preference')">
     <meta charset="UTF-8" />
     <title>Title</title>
 </head>
 <body>
 
 <nav th:replace="partials :: navbar"/>
+<div class="container uk-flex">
+    <form action="/adopter/preferences" method="post" class="uk-margin-auto uk-width-1-2" th:object="${preference}">
 
-<form action="/adopter/preferences" method="post" th:object="${preference}" >
-    <label>Breed</label>
-    <input type="text" th:field="*{breed}" />
-    <label>Age</label>
-    <input type="text" th:field="*{age}" />
-    <label>Color</label>
-    <input type="text" th:field="*{color}" />
-    <label>Sex</label>
-    <select th:field="*{sex}">
-        <option value="m">Male</option>
-        <option value="f">Female</option>
-    </select>
-    <label>Weight</label>
-    <input type="text" th:field="*{weight}" />
+        <h1>Setup a preference</h1>
+        <div class="uk-margin">
+            <label for="breed">Breed</label>
+            <input id="breed" class="uk-input uk-form-width-medium uk-width-expand" type="text"
+                   th:field="*{breed}"/>
+        </div>
+        <div class="uk-margin">
+            <label for="age">Age</label>
+            <input id="age" class="uk-input uk-form-width-medium uk-width-expand" type="text" placeholder="0"
+                   th:field="*{age}"/>
+        </div>
+        <div class="uk-margin">
+            <label for="color">Color</label>
+            <input id="color" class="uk-input uk-form-width-medium uk-width-expand" type="text"
+                   th:field="*{color}"/>
+        </div>
+        <div class="uk-margin">
+            <label for="sex">Sex</label>
+            <select id="sex" class="uk-input uk-form-width-medium uk-width-expand" th:field="*{sex}">
+                <option value="m">Male</option>
+                <option value="f">Female</option>
+            </select>
+        </div>
+        <div class="uk-margin">
+            <label for="weight">Weight</label>
+            <input id="weight" class="uk-input uk-form-width-medium uk-width-expand" type="text" placeholder="0"
+                   th:field="*{weight}"/>
+        </div>
 
-    <input type="submit" />
-</form>
+        <button type="submit" class="uk-margin-auto uk-button uk-button-default uk-button-small">Submit</button>
+    </form>
 
+
+</div>
 
 </body>
 </html>
