--- a/src/main/resources/templates/system/sign-up.html
+++ b/src/main/resources/templates/system/sign-up.html
@@ -31,6 +31,11 @@
     </div>
 
     <div>
+        <label for="confPass">Confirm Password</label>
+        <input id="confPass" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="password" name="confPass"/>
+    </div>
+
+    <div>
     <label for="name">Name</label>
     <input id="name" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{name}" />
     </div>
