edited pom file again and trying to get that setting link to work

--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -51,6 +51,9 @@
         <li sec:authorize="!isAuthenticated()">
             <a class="nav-link" href="/login">Login</a>
         </li>
+        <li sec:authorize="!isAuthenticated()">
+            <a class="nav-link" th:href="'/adopter/preferences/edit/'+${user.id}">Login</a>
+        </li>
     </ul>
     </div>
 </nav>
